Fix Simple Music Player badge

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     </div>
                 </a>
                 <a href="https://simple-music-player.justarist.cc" class="glass small-card reveal">
-                    <span class="badge status-dev">In Development</span>
+                    <span class="badge status-released">Released</span>
                     <div class="project-img-bg" style="background-image: url('./images/simple-music-player_preview.png'); opacity: 0.4;"></div>
                     <div class="card-info">  
                         <h3>Simple Music Player</h3>
