Fix language badges padding for mobile

--- a/index.html
+++ b/index.html
@@ -257,10 +257,11 @@
             border-color: rgba(165, 180, 252, 0.3);
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 800px) {
             .header-profile { flex-direction: column; text-align: center; }
             .project-grid { grid-template-columns: 1fr; }
             .container { width: 95%; }
+            .contacts { padding-top: 63.2px }
         }
 
         .reveal {
